--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 
 <body>
     <main class="container">
-        <section class="banner">
+        <div class="banner">
             <div class="banner-left">
                 <div class="sub-container">
                     <h1 class="banner-title">Programming hero</h1>
                     <p class="banner-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptatum dignissimos nulla quo
-                        odio illum quibusdam? Non, at vero mollitia reiciendis delectus asperiores quae qui expedita
-                        ullam ipsam ratione cupiditate?
+                        Personalized, fun, and interactive learning process. Enjoy our gamified courses to master
+                        python, Web development, cyber security, C, C++ course and more.
                     </p>
                     <button class="love-button">Love P-hero</button>
                 </div>
@@ -26,8 +25,8 @@
             <div class="banner-right">
                 <img src="./img/team.jpg" alt="">
             </div>
-        </section>
-        <section>
+        </div>
+        <div class="gallery-section">
             <div class="gallery-title">
                 <h1>Gallery</h1>
             </div>
@@ -187,8 +186,8 @@
                     </div>
                 </div>
             </div>
-            </div>
-        </section>
+        </div>
+        </div>
     </main>
 </body>
 
